--- a/WeatherDashboard/appsettings.Development.json
+++ b/WeatherDashboard/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "WeatherApi": {
+    "ApiKey": "9780f7c3c2e48fd6a72b5eeb26d48430"
+  },
+  "AllowedHosts": "*"
 }
